# TheStudio

./: .gitignore  README.md  WORKING_FILES_GUIDE.md
studio/: CHANGELOG.md  DEFAULT_BEHAVIOR.md  README.md  STUDIO_INTERACTION_GUIDE.md  TOKEN_TRACKING_SUMMARY.md  V2_1_IMPROVEMENTS.md  WINDSURF_QUICKREF.md  analyze_tokens.py  cleanup.py  pyproject.toml  rerun.py  run_phase.py  run_phase_roles.py  scopes.py  setup_scopes.py  studio  studio.manifest.json  studio_cli.py  token_tracker.py
studio/.studio/: scopes.toml  validation.toml
studio/config/: studio_settings.toml
studio/docs/: AGENTS_REFERENCE.md  API.md  ARCHITECTURE.md  CLUTTER_MANAGEMENT_PLAN.md  INDEX.md  INTEGRATION_GUIDE.md  QUICKSTART.md  SCOPES_GUIDE.md  SHOESTRING_PRESET.md  STORAGE_MANAGEMENT.md  STUDIO_BRIDGE_TEMPLATE.md  TEST_DRIVEN_GUIDE.md  TOKEN_TRACKING.md  VALIDATION_GUIDE.md  WINDSURF_USAGE.md
studio/docs/role_prompts/: art.md  design.md  engineering.md  marketing.md  product.md  qa.md
studio/prompts/: cascade_workflow.md
studio/role_packs/: studio_core.json
studio/src/studio/: _runtime_removed.py  crew.py  crew_runner.py  health.py  implementation.py  iteration.py  main.py  telemetry.py  verdict.py
studio/src/studio/config/: agents.yaml  tasks.yaml
studio/tests/: test_benchmarks.py  test_cleanup.py  test_health.py  test_integration.py  test_iteration.py  test_rerun.py  test_run_phase.py  test_scopes.py  test_telemetry_config.py  test_validators.py
studio/validators/: __init__.py  code_validator.py  document_validator.py
