[project]
name = "studio"
version = "0.1.0"
description = "studio using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.1",
    "crewai[google-genai,tools]==1.7.2",
    "fastapi>=0.125.0",
    "langchain-google-genai>=3.2.0",
    "litellm>=1.75.3",
    "uvicorn>=0.38.0",
]

[project.scripts]
studio = "studio.main:run"
run_crew = "studio.main:run"
train = "studio.main:train"
replay = "studio.main:replay"
test = "studio.main:test"
run_with_trigger = "studio.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
